@@ -1,3 +1,9 @@
+2006-09-29  Andrew MacLeod  <amacleod@redhat.com>
+
+	* tree-ssa-ilve.c (mix): Define hash mix.
+	(coalesce_pair_map_hash): Use hash mix.
+	(create_coalesce_list): Calculate initial size of hash table.
+
 2006-09-26  Andrew MacLeod  <amacleod@redhat.com>
 
 	* tree-outof-ssa.c (build_ssa_conflict_graph): Add comments.
